adding two file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <center>
         <h1>Hello git Home page ............!</h1>
-        <h2>I am the sub heading</h2>
-        <button>go fast</button>
+
+        <h2>I am the sub heading1</h2>
+        <button>go fast1</button>
     </center>
 </body>
 </html>
