--- a/page1.html
+++ b/page1.html
@@ -10,6 +10,7 @@
     <center>
         <h1>Hello git  page 1 ............!</h1>
         <h2>I am the sub heading.</h2>
+        <h1>Hello git  page 1 ............!</h1>
     </center>
 </body>
 </html>
